--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "b100g",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "next dev",
     "slicemachine": "start-slicemachine",
